--- a/app/inicio.css
+++ b/app/inicio.css
@@ -147,6 +147,15 @@ section::before{
     grid-template-columns: auto auto auto;
     gap: 1rem;
 }
+.sectionx{
+    position: relative;
+    width: 100%;
+    min-height: 100vh;
+    padding: 0 100px;
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+}
 .sectionx::before{
     content: '';
     position: absolute;
@@ -542,14 +551,16 @@ font-size: 14px;
         font-family: 'Poppins', sans-serif;
     }
     .sectionx{
-        position: relative;
-      
-        height: 100%;
-        display: flex;
-        overflow: hidden;
+          position: relative;
+    width: 100%;
+    min-height: 100vh;
+    padding: 0 100px;
+    display: flex;
+    align-items: center;
+    overflow: hidden;
         flex-direction: column;
     }
- 
+
     
     /*Card container*/
 .cardItems {
@@ -585,7 +596,6 @@ font-size: 14px;
     
     .cardItems .imgBx:hover .picture{
       background-size: 110%;
-     
     }
   
     .cardItems .imgBx::before {
