--- a/app/globals.css
+++ b/app/globals.css
@@ -25,6 +25,23 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+@media (max-width:800px){
+   :root {
+    --foreground-rgb: 255, 255, 255;
+    --background-start-rgb: 0, 0, 0;
+    --background-end-rgb: 0, 0, 0;
+     background:#000;
+  }
+  body {
+  color: rgb(var(--foreground-rgb));
+  background: linear-gradient(
+      to bottom,
+      transparent,
+      rgb(var(--background-end-rgb))
+    )
+    rgb(var(--background-start-rgb));
+}
+}
 
 @layer utilities {
   .text-balance {
