--- a/app/inicio.css
+++ b/app/inicio.css
@@ -864,4 +864,37 @@ padding: 5px;
         gap: 10px;
         transform-origin: left;
     }
+    .formuniversal{
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+    transition:1s ;
+    width:200px;
+}
+.formuniversal p{
+    display:flex;
+    padding: 9px;
+}
+.formuniversal input{
+    font-size: 19px;
+    border-radius: 20px;
+    background: transparent;
+    border: solid 1px aqua;
+    color: #1de5ff;
+    padding: 5px;
+}
+.formuniversal input:hover{
+    background: aqua;
+   filter: drop-shadow( 3px 5px 10px aqua);
+   transition: 0.8s;
+   border: solid 1px aqua;
+   color: #000;
+}
+.formuniversal .reset .resetpasswordt span{
+    font-size: 9px;
+}
+.formuniversal .reset  .resetpasswordt{
+    color: #1de5ff;
+}
+ 
 }
