--- a/app/inicio.css
+++ b/app/inicio.css
@@ -867,9 +867,11 @@ padding: 5px;
     .formuniversal{
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     padding: 1rem;
     transition:1s ;
-    width:200px;
+    width:230px;
 }
 .formuniversal p{
     display:flex;
