--- a/app/inicio.css
+++ b/app/inicio.css
@@ -889,6 +889,7 @@ padding: 5px;
     border: solid 1px aqua;
     color: #1de5ff;
     padding: 5px;
+    width:180px;
     
 }
 .formuniversal input:hover{
