--- a/app/inicio.css
+++ b/app/inicio.css
@@ -560,7 +560,37 @@ font-size: 14px;
     overflow: hidden;
         flex-direction: column;
     }
-
+header{
+    display: flex;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 10000;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px 100px;
+    background: #191919;
+        opacity: 0.8;
+}
+header .logo{
+    display: flex;
+    font-size: 1.5em;
+    color: aliceblue;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    text-decoration: none;
+}
+header .logo span{
+    color: rgb(5, 241, 241);
+    border-bottom: 4px solid rgb(5, 241, 241);
+}
+header .logo .in{
+    font-size: 35px;
+}
+header .toggle{
+    position: relative; 
+}
     
     /*Card container*/
 .cardItems {
@@ -790,8 +820,7 @@ padding: 5px;
     justify-content: center;
     align-items: center;
     padding:1rem;
-   
-    
+    width:90%;
     z-index: 1;
 }
   
