--- a/app/inicio.css
+++ b/app/inicio.css
@@ -280,11 +280,13 @@ section.active::before{
     font-size: 1.5em;
     letter-spacing: 2px;
     margin-bottom: 10px;
+    -webkit-text-stroke: 2px black;
 }
 .banner .content .contentBx h2{
   font-size: 3em;
   line-height: 1em;
   color: #fff;
+    -webkit-text-stroke: 2px black;
 }
 .banner .content .contentBx h3{
     font-weight: 300;
@@ -297,6 +299,7 @@ section.active::before{
    color: #fff;
    margin: 10px 0;
    text-align: justify; 
+      -webkit-text-stroke: 1px black;
 }
 .banner .content .contentBx .link{
     display: flex;
