--- a/app/inicio.css
+++ b/app/inicio.css
@@ -553,12 +553,7 @@ font-size: 14px;
         box-sizing: border-box;
         font-family: 'Poppins', sans-serif;
     }
-    .todoR{
-    display:flex;
-    flex-direction: column; 
-    align-items: center;
-    width:240px;
-    }
+  
     .sectionx{
     position: relative;
     width: 100%;
@@ -569,7 +564,7 @@ font-size: 14px;
     overflow: hidden;
     flex-direction: column;
     }
-header{
+.sectionx header{
     display: flex;
     position: fixed;
     top: 0;
@@ -582,7 +577,7 @@ header{
     background: #191919;
         opacity: 0.8;
 }
-header .logo{
+.sectionx header .logo{
     display: flex;
     font-size: 1.5em;
     color: aliceblue;
@@ -590,14 +585,14 @@ header .logo{
     text-transform: uppercase;
     text-decoration: none;
 }
-header .logo span{
+.sectionx header .logo span{
     color: rgb(5, 241, 241);
     border-bottom: 4px solid rgb(5, 241, 241);
 }
-header .logo .in{
+.sectionx header .logo .in{
     font-size: 35px;
 }
-header .toggle{
+.sectionx header .toggle{
     position: relative; 
 }
     
