--- a/app/inicio.css
+++ b/app/inicio.css
@@ -554,7 +554,7 @@ font-size: 14px;
         font-family: 'Poppins', sans-serif;
     }
   
-    .section{
+    .sectionx{
     position: relative;
     width: 100%;
     min-height: 100vh;
@@ -577,7 +577,7 @@ font-size: 14px;
     background: #191919;
         opacity: 0.8;
 }
-.section header .logo{
+.sectionx header .logo{
     display: flex;
     font-size: 1.5em;
     color: aliceblue;
@@ -707,23 +707,16 @@ font-size: 14px;
      z-index: 2;
      
 }
-.section.active::before{
+.sectionx.active::before{
     background: #393b43;
     box-shadow: 0 0 0 1200px #2e3036;
     color: aliceblue;
 }
-.section .contenidoApp{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    margin-top: 100px;
-    gap:10px;
-    height: 100%;
-    width:100%;
+.sectionx .contenidoApp{
+  
     
 }
-.section .contenidoApp .portafolioPerfil{
+.sectionx .contenidoApp .portafolioPerfil{
     display: flex;
     flex-direction: column;
     top: 280px;
@@ -732,18 +725,18 @@ font-size: 14px;
     align-items: center;
     
 }
-.section .contenidoApp .portafolioPerfil h2{
+.sectionx .contenidoApp .portafolioPerfil h2{
     font-size: 30px;
     color: #1de5ff;
 }
-.section .contenidoApp .portafolioPerfil {
+.sectionx .contenidoApp .portafolioPerfil {
     font-size: 12px;
     color: #cac8c8;
     width: 99%;
     text-align: justify;
     transition: 1s;
 }
-.section .contenidoApp .portafolioPerfil span {
+.sectionx .contenidoApp .portafolioPerfil span {
     color: #1de5ff;
 }
 .contenidoApp .portafolioPerfil ul{
@@ -841,19 +834,7 @@ padding: 5px;
         width: 120px;
         height: 120px;
     }
-    header{
-        display: flex;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        z-index: 10000;
-        justify-content: space-between;
-        align-items: center;
-        padding: 10px 20px;
-        background: #191919;
-        opacity: 0.8;
-    }
+
     .banner .content{
         position: relative;
         z-index: 1;
