--- a/app/inicio.css
+++ b/app/inicio.css
@@ -720,7 +720,11 @@ font-size: 14px;
     box-shadow: 0 0 0 1200px #2e3036;
     color: aliceblue;
 }
-
+.sectionx .contenidoApp .portafolioPerfil{
+    display:flex;
+    flex-direction: column;
+    width:100%
+}
 
 .sectionx .contenidoApp .portafolioPerfil h2{
     font-size: 30px;
@@ -734,9 +738,6 @@ font-size: 14px;
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-wrap: wrap;
-    font-size: 20px;
-    color: #cac8c8;
     gap: 1rem;
   }
   .contenidoApp .portafolioPerfil ul li {
@@ -770,11 +771,7 @@ padding: 5px;
    font-size: 16px;
       }
     
- .contenidoApp .portafolioPerfil   .portafoliorep{
-     display:grid;
-     justify-content: center;
-     
- }
+
 .sectionx .contenidoApp ul{
     display: flex;
     gap: 1rem;
@@ -803,7 +800,7 @@ padding: 5px;
 }
 .contenidoApp .portafolioData {
     display: grid;
-    grid-template-columns: repeat(1, 1fr); 
+    grid-template-columns: repeat(2, 1fr); 
     justify-content: center;
     align-items: center;
    
