--- a/app/inicio.css
+++ b/app/inicio.css
@@ -706,12 +706,16 @@ font-size: 14px;
      
 }
 .sectionx .contenidoApp{
-    display:flex;
-     justify-content: center;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     align-items: center;
     flex-direction: column;
-    padding:0;
-    width:100%
+    top: -300px;
+    padding: 1rem;
+    gap:1rem;
+    height: 100%;
+    padding: 150px;
 } 
 .sectionx.active::before{
     background: #393b43;
