--- a/app/inicio.css
+++ b/app/inicio.css
@@ -715,6 +715,7 @@ font-size: 14px;
     display:flex;
     flex-direction: column;
     width:100%
+    padding:1rem;
 }
 
 .sectionx .contenidoApp .portafolioPerfil h2{
