--- a/app/inicio.css
+++ b/app/inicio.css
@@ -598,6 +598,7 @@ font-size: 14px;
 .cardItems {
     width: 190px;
     height: 190px;
+    min-width: 100px;
     background: #1c1c1c;
     border-radius: 40px;
     box-shadow: 0 20px 25px rgba(0,0, 0, 0.25);
@@ -672,13 +673,12 @@ font-size: 14px;
     .cardItems:hover .content  p{
   opacity: 1;
   text-align: justify;
-  font-size: 14px;
+  font-size: 11px;
     }
     .cardItems .content ul{
         display: flex;
         justify-content: flex-start;
         align-items: flex-start;
-        
         gap: 1px;
       }
       .cardItems .content ul li .mp{
@@ -722,7 +722,10 @@ font-size: 14px;
     font-size: 30px;
     color: #1de5ff;
 }
-
+.sectionx .contenidoApp .portafolioPerfil p{
+    font-size: 12px;
+   min-width: 100px;
+}
 .sectionx .contenidoApp .portafolioPerfil span {
     color: #1de5ff;
 }
@@ -1074,7 +1077,10 @@ padding: 5px;
     width:100%
     padding:1rem;
 }
-
+.sectionx .contenidoApp .portafolioPerfil p{
+    font-size: 12px;
+   min-width: 100px;
+}
 .sectionx .contenidoApp .portafolioPerfil h2{
     font-size: 30px;
     color: #1de5ff;
@@ -1152,8 +1158,9 @@ padding: 5px;
     grid-template-columns: repeat(1, 1fr); 
     justify-content: center;
     align-items: center;
-   
-    width:90%;
+    width:auto;
+    font-size: 12px;
+   min-width: 100px;
     z-index: 1;
 }
   
