--- a/app/inicio.css
+++ b/app/inicio.css
@@ -729,6 +729,41 @@ font-size: 14px;
 .sectionx .contenidoApp .portafolioPerfil span {
     color: #1de5ff;
 }
+        /* inicio juegos*/
+ .sectionx .contenidoApp .juegos{
+  display: flex;
+  position: relative;
+  z-index: 1;
+ }
+ .sectionx .contenidoApp .juegos li  {
+    color: #cac8c8;
+    text-decoration: none;
+    background: transparent;
+    border: solid 1px aqua;
+    border-radius: 20px;
+   }
+   .sectionx .contenidoApp .juegos li a {
+    display: flex;
+    color: #cac8c8;
+    text-decoration: none;
+    background: transparent;
+    gap: 2px;
+   }
+   .sectionx .contenidoApp .juegos li a .mp{
+    color: #cac8c8;
+    font-size: 30px;
+   }
+   .sectionx .contenidoApp .juegos li:hover  {
+    display: flex;
+    color: #0f0f0f;
+    text-decoration: none;
+    background: aqua;
+    gap: 2px;
+    filter: drop-shadow(0px 1px 10px aqua);
+    border: solid 1px aqua;
+    border-radius: 20px;
+   }
+   /*fin juegos*/ 
 .contenidoApp .portafolioPerfil ul{
     display: flex;
     justify-content: center;
