--- a/app/inicio.css
+++ b/app/inicio.css
@@ -278,13 +278,13 @@ section.active::before{
     font-size: 1.5em;
     letter-spacing: 2px;
     margin-bottom: 10px;
-    -webkit-text-stroke: 2px black;
+    
 }
 .banner .content .contentBx h2{
   font-size: 3em;
   line-height: 1em;
   color: #fff;
-    -webkit-text-stroke: 2px black;
+ 
 }
 .banner .content .contentBx h3{
     font-weight: 300;
@@ -297,7 +297,7 @@ section.active::before{
    color: #fff;
    margin: 10px 0;
    text-align: justify; 
-      -webkit-text-stroke: 1px black;
+     
 }
 .banner .content .contentBx .link{
     display: flex;
@@ -583,6 +583,7 @@ font-size: 14px;
     text-transform: uppercase;
     text-decoration: none;
 }
+    
  header .logo span{
     color: rgb(5, 241, 241);
     border-bottom: 4px solid rgb(5, 241, 241);
@@ -881,29 +882,33 @@ padding: 5px;
         padding: 10px 20px;
     }
     .banner .content .contentBx h4{
-        font-weight: 600;
-        color: aqua;
-        font-size: 1.5em;
-        letter-spacing: 2px;
-        margin-bottom: 10px;
-    }
-    .banner .content .contentBx h2{
-        font-size: 2em;
-        line-height: 1em;
-        color: #fff;
-      }
-      .banner .content .contentBx h3{
-          font-weight: 300;
-          color: #fff;
-          font-size: 1em;
-          line-height: 1.5em;
-      }
-      .banner .content .contentBx p{
-         font-size: 16px;
-         color: #fff;
-         margin: 5px 0;
-         text-align: justify; 
-      }
+    font-weight: 600;
+    color: aqua;
+    font-size: 1.5em;
+    letter-spacing: 2px;
+    margin-bottom: 10px;
+    -webkit-text-stroke: 1px #484848;
+}
+.banner .content .contentBx h2{
+  font-size: 3em;
+  line-height: 1em;
+  color: #fff;
+    -webkit-text-stroke: 1px #484848;
+}
+.banner .content .contentBx h3{
+    font-weight: 300;
+    color: #fff;
+    font-size: 2em;
+    line-height: 1.5em;
+}
+.banner .content .contentBx p{
+   font-size: 1em;
+   color: #fff;
+   margin: 10px 0;
+   text-align: justify; 
+      -webkit-text-stroke: 1px #484848;
+}
+   
       .banner .sci{
         position: absolute;
         bottom: -46px;
